--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -8,6 +8,7 @@
       <ul class="nav flex-column sub-menu">
         <li class="nav-item"> <a class="nav-link" href="/01">Campo</a></li>
         <li class="nav-item"> <a class="nav-link" href="/0101">Lote</a></li>
+        <li class="nav-item"> <a class="nav-link" href="/regLluvias">Registros LLuvia</a></li>
       </ul>
     </div>
   </li>
