--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -9,6 +9,7 @@
         <li class="nav-item"> <a class="nav-link" href="/01">Campo</a></li>
         <li class="nav-item"> <a class="nav-link" href="/0101">Lote</a></li>
         <li class="nav-item"> <a class="nav-link" href="/regLluvias">Registros LLuvia</a></li>
+        <li class="nav-item"> <a class="nav-link" href="/general/contactos">Contactos</a></li>
       </ul>
     </div>
   </li>
