--- a/core/staticfiles/css/modal.css
+++ b/core/staticfiles/css/modal.css
@@ -14,8 +14,8 @@
 
   /* Modal Content/Box */
 .inno-modal-content {
-    background-color: #771616;
-    margin: 15% auto; /* 15% from the top and centered */
+    background-color: #e46565;
+    margin: 5% auto; /* 15% from the top and centered */
     margin-left: 20%;
     padding: 20px;
     border: 1px solid #888;
@@ -34,4 +34,46 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .modal-content {
+    margin: 20px;
+    width: 90%;
+  }
 }
