--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -7,26 +7,33 @@
 {% block content %}
 <div class="row">
   <div class="col-md-12 grid-margin">
-      <div class="row">
-        <div class="col-12 col-xl-8 mb-4 mb-xl-0">
-          <h3 class="font-weight-bold">Welcome {{ user.get_full_name }}</h3>
-          <h6 class="font-weight-normal mb-0">All systems are running smoothly! You have <span class="text-primary">3 unread alerts!</span></h6>
-        </div>
-        <div class="col-12 col-xl-4">
-         <div class="justify-content-end d-flex">
-          <div class="dropdown flex-md-grow-1 flex-xl-grow-0">
-            <button class="btn btn-sm btn-light bg-white dropdown-toggle" type="button" id="dropdownMenuDate2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-             <i class="mdi mdi-calendar"></i> Today (10 Jan 2021)
-            </button>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuDate2">
-              <a class="dropdown-item" href="#">January - March</a>
-              <a class="dropdown-item" href="#">March - June</a>
-              <a class="dropdown-item" href="#">June - August</a>
-              <a class="dropdown-item" href="#">August - November</a>
+    <div class="row">
+      <div class="col-12 col-xl-8 mb-4 mb-xl-0">
+        <h3 class="font-weight-bold col-10 col-xl-6 mb-5 mb-xl-0">Bienvenido {{ user.get_full_name }}</h3>
+        <form class="form-sample" method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          {{ form.non_field_errors }}
+          <div class="col-12 d-flex mt-5">
+            <div class="form-group row d-flex col-sm-6">
+              <div class="col-sm-9 d-flex">
+                <select id="campo" class="form-control">
+                  <option value="*" selected="selected">Seleccionar campo</option>
+                  {% for campo in campos %}
+                    <option value="{{ campo.id }}">{{ campo.nombre }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+            <div class="form-group d-flex align-items-center col-sm-6">
+              <select id="ano" name="ano" class="form-control">
+                <option value="" {% if not ano_filter %}selected{% endif %} disabled>Seleccionar año</option>
+                <option value="2021" {% if ano_filter == "2021" %}selected{% endif %}>2021</option>
+                <option value="2022" {% if ano_filter == "2022" %}selected{% endif %}>2022</option>
+                <option value="2023" {% if ano_filter == "2023" %}selected{% endif %}>2023</option>
+              </select>
             </div>
           </div>
-         </div>
-        </div>
+       </form>
       </div>
     </div>
   </div>
@@ -668,6 +675,9 @@
     var componentes_labels = [];
     var componentes_datas = [];
     var componentes_cololes = [];
+    var lluvia_labels =[];
+    var lluvia_datas = [];
+
 
     {% for rubro in rubros_acumulados %}
     rubros_labels.push('{{rubro.rubro_desc}}');
@@ -678,6 +688,10 @@
     componentes_labels.push('{{componente.componente_desc}}')
     componentes_datas.push('{{componente.saldo}}')
     componentes_cololes.push('{{componente.color}}')
+    {% endfor %}
+
+    {% for lluvia_mes in ultimo_ano %}
+    lluvia_datas.push({{ lluvia_mes.total }});
     {% endfor %}
 
     var texto_grafico1 = '<div class="report-chart">';
